bugfix : .body div overflow hidden

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -683,6 +683,9 @@ tbody td, thead th {
   width: 95px;
   vertical-align: top;
 }
+.projects .body, .tree-list-view>.rows>.row .column {
+  overflow: hidden;
+}
 table {
   border-collapse: collapse;
   border-spacing: 0;
